--- a/modules/user/myReceive.ui
+++ b/modules/user/myReceive.ui
@@ -200,17 +200,22 @@
     </column>
     <column>
      <property name="text">
-      <string>完整路线</string>
-     </property>
-    </column>
-    <column>
-     <property name="text">
       <string>当前位置</string>
      </property>
     </column>
     <column>
      <property name="text">
       <string>当前状态</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>预计送达时间</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>完整路线</string>
      </property>
     </column>
    </widget>
